examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx
// E420: unresolved multiple effect variables in subtraction paths.

fn unresolved_many(x: Int) -> Int with |e - IO, |t - Time {
    x
}

fn main() -> Unit {
    unresolved_many(1)
    None
}
